<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".UI.Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/toolbarRL"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/revivelogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="Back"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarRL">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:hint="@string/first_name"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:helperText="Required*"
                app:helperTextTextColor="#D00B0B"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="21" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:hint="@string/last_name"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:helperText="Required*"
                app:helperTextTextColor="#D00B0B"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="21" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:hint="@string/email"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="Required*"
                app:helperTextTextColor="#D00B0B"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:hint="@string/password"
                app:counterEnabled="true"
                app:endIconMode="password_toggle"
                app:helperText="Required*"
                app:counterMaxLength="8"
                app:helperTextTextColor="#D00B0B"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ssn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:hint="@string/ssn"
                app:counterEnabled="true"
                app:counterMaxLength="14"
                app:endIconMode="custom"
                app:helperText="Required*"
                app:helperTextTextColor="#D00B0B"
                app:startIconDrawable="@drawable/ic_baseline_strikethrough_s_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/assn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="21" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:hint="@string/address"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="Required*"
                app:helperTextTextColor="#D00B0B"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:hint="@string/phone_number"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:endIconMode="clear_text"
                app:helperText="Required*"
                app:helperTextTextColor="#D00B0B"
                app:startIconDrawable="@drawable/ic_baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="21" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:hint="@string/birth_of_date"
                app:endIconMode="clear_text"
                app:helperText="Required*"
                app:helperTextTextColor="#D00B0B"
                app:startIconDrawable="@drawable/ic_baseline_date_range_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/BOD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Register Button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:textSize="@dimen/_15sdp"
                android:textStyle="italic|bold"
                android:background="@color/button"
                android:text="@string/register"
                android:textColor="@color/white" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>