<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".UI.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/relative_img"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/revivelogo"
            android:contentDescription="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relative_img"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_23ssp"
                android:textStyle="bold|italic" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:hint="@string/email"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="Required*"
                app:helperTextTextColor="#D00B0B"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:hint="@string/password"
                app:counterEnabled="true"
                app:counterMaxLength="8"
                app:endIconMode="password_toggle"
                app:helperText="Required*"
                app:helperTextTextColor="#D00B0B"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mEditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="21"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--forget password-->

            <TextView
                android:id="@+id/forgetTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_3sdp"
                android:text="@string/forgetpassword"
                android:textColor="@color/gray02"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold|italic" />


            <!--Login Button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/goHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="#4B00D1"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <!--No Account Register -->
            <TextView
                android:id="@+id/noAccountTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/new_user_signup"
                android:textColor="@color/gray02"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold|italic" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>